--- a/Assignment_5.ipynb
+++ b/Assignment_5.ipynb
@@ -42,7 +42,7 @@
     " Q1. Find the sum of missing data for every column in the dataset using the (isnull function and sum function) \n",
     "'''\n",
     "import pandas as pd\n",
-    "df=pd.read_csv('C:/Users/Intel/Desktop/weather.csv')\n",
+    "df=pd.read_csv('https://raw.githubusercontent.com/Shreyas3108/Weather/master/weather.csv')\n",
     "print(df.isnull().sum())"
    ]
   },
@@ -1913,7 +1913,7 @@
     "'''\n",
     " Q3. Import the dataset and this time replace the missing null values with mean of the column series. \n",
     "'''\n",
-    "df2=pd.read_csv('C:/Users/Intel/Desktop/weather.csv')\n",
+    "df2=pd.read_csv('https://raw.githubusercontent.com/Shreyas3108/Weather/master/weather.csv')\n",
     "df2.fillna(df.mean)"
    ]
   },
