Acadview Machine Learning Training

--- a/Assignment_8.ipynb
+++ b/Assignment_8.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Read the CSV file into a DataFrame: df\n",
-    "df = pd.read_csv('C:/Users/Intel/Desktop/kc_house_data.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/Shreyas3108/house-price-prediction/master/kc_house_data.csv')\n",
     "\n",
     "# Create arrays for features and target variable\n",
     "y = df.price.values\n",
